# concurrent-scrape

./: .gitignore  README.md  delphai.json  protodep.toml  pyproject.toml  run.sh
.data/: google_news_for_training.csv
apnews.com/article/: financial-markets-prices-health-coronavirus-business-7d3b979e1fc8f7c9cde7822131b0e014.txt
src/: main.py
